-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.8.4, 5.0.2, 5.1.0 RC1
-
None
-
Windows 7
-
qtbase/stable: 17fe17d525ffde65fcbe88c6ade539ab8bca1772
QColorDialog adds custom color to wrong place when the position is selected with arrow keys. The following steps can be used to reproduce the issue:
- launch QColorDialog
- set a cell focused under ‘Custom colors‘ and change the focused cell with the arrow keys
- select a color form the selector and add it with the ‘Add to Custom Colors’ button
-> the color is added to the cell that was selected with mouse